--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -686,6 +686,7 @@
     "cancel": "Cancel"
   },
   "profileDetailsPage": {
+    "noLanguagesAvailable": "No languages available",
     "email": "Email",
     "gender": "Gender",
     "maritalStatus": "Marital Status",
