--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -5,6 +5,11 @@
   "loading": {
     "title": "Loading..."
   },
+  "DefinitionWidget": {
+    "early": "Early protection for your family health",
+    "your_journey": "Your journey to a healthier you starts here.",
+    "empowering": "Empowering your well-being, every step of the way."
+  },
   "welcome": {
     "title": "Let's get Welcomed!",
     "loading_to_enjoy": "Loading to enjoy the features provided",
@@ -87,6 +92,34 @@
     "delete": "Delete",
     "confirm": "Confirm"
   },
+  "final_status": "Final",
+  "completed_status": "Completed",
+  "condition_confirmed_status": "Confirmed",
+  "service_request_active_status": "Active",
+  "partial_status": "Partial",
+  "service_request_pending_status": "Pending",
+  "preliminary_status": "Preliminary",
+  "amended_status": "Amended",
+  "corrected_status": "Corrected",
+  "appended_status": "Appended",
+  "cancelled_status": "Cancelled",
+  "service_request_cancelled_status": "Cancelled",
+  "entered_in_error_status": "Entered in Error",
+  "unknown_status": "Unknown",
+  "condition_active_status": "Active",
+  "service_request_completed_status": "Completed",
+  "service_request_rejected_status": "Rejected",
+  "active": "Active",
+  "in_progress": "In Progress",
+  "recurrence": "Recurrence",
+  "relapse": "Relapse",
+  "inactive": "Inactive",
+  "remission": "Remission",
+  "resolved": "Resolved",
+  "completed": "Completed",
+  "entered_in_error": "Entered in Error",
+  "unknown": "Unknown",
+  "click_to_view_details": "Click to view details",
   "on_boarding": {
     "get_start": "Get start",
     "manage_medical_records": "Manage medical records",
@@ -179,6 +212,16 @@
       "completed": "Completed",
       "cancelled": "Cancelled"
     },
+    "encounterStatus": {
+      "completed": "Completed",
+      "in_progress": "In Progress",
+      "cancelled": "Cancelled",
+      "planned": "Planned",
+      "finalized": "Finalized",
+      "unknown": "Unknown"
+    },
+    "vacation_created _successfully": "Vacation created successfully",
+    "vacation_updated_successfully": "Vacation updated successfully",
     "status": {
       "upcoming": "Upcoming",
       "completed": "Completed",
@@ -373,6 +416,14 @@
     "statusCancelled": "Cancelled"
   },
   "serviceRequestDetailsPage": {
+    "status": {
+      "active": "Active",
+      "onHold": "On Hold",
+      "revoked": "Revoked",
+      "enteredInError": "Enter in error",
+      "rejected": "Rejected",
+      "completed": "Completed"
+    },
     "appBarTitle": "Service Request Details",
     "noDetailsFoundTitle": "Oops! No details found for this service request.",
     "noDetailsFoundMessage": "It might have been moved, deleted, or you might not have access.",
@@ -584,6 +635,25 @@
     "appointment": "Appointment:",
     "Noextra": "No extra details provided.",
     "free": "Free"
+  },
+  "status": {
+    "in_progress": "In Progress",
+    "recurrence": "Recurrence",
+    "inactive": "Inactive",
+    "remission": "Remission",
+    "resolved": "Resolved",
+    "entered_in_error": "Entered in Error",
+    "unknown": "Unknown",
+    "relapse": "Relapse",
+    "in-progress": "In Progress",
+    "final": "Completed",
+    "active": "Active",
+    "on-hold": "On Hold",
+    "revoked": "Revoked",
+    "entered-in-error": "Entered in Error",
+    "rejected": "Rejected",
+    "completed": "Completed",
+    "default": "Unknown"
   },
   "greetings": {
     "morning": "Good Morning ☀️",
@@ -854,7 +924,11 @@
     "allergies": {
       "penicillin": "Penicillin",
       "skinRash": "Skin Rash",
-      "avoidPenicillin": "Patient should avoid penicillin"
+      "avoidPenicillin": "Patient should avoid penicillin",
+      "high": "High",
+      "low": "Low",
+      "unable_to_assess": "Unable to assess",
+      "not_applicable": "N/A"
     },
     "conditions": {
       "commonCold": "Common Cold",
@@ -1086,7 +1160,11 @@
     "reset_button": "Reset",
     "end_date_label": "End Date",
     "appointment_status_updated_success": "Appointment status updated successfully!",
-    "dialog_cancel_button": "Cancel"
+    "dialog_cancel_button": "Cancel",
+    "canceled_appointment": "Canceled",
+    "booked_appointment": "Booked",
+    "finished_appointment": "Finished",
+    "all_appointment": "All"
   },
   "schedulePage": {
     "my_schedules_title": "My Schedules",
@@ -1151,9 +1229,24 @@
     "comment_form_label": "Comment (optional)",
     "comment_form_hint": "Add any specific notes for this schedule",
     "create_schedule_form_button": "Create Schedule",
-    "update_schedule_form_button": "Update Schedule"
+    "update_schedule_form_button": "Update Schedule",
+    "duration": "Duration :",
+    "hour": "hour",
+    "start_date_label": "Start date",
+    "end_date_label": "End date"
   },
   "encounterPage": {
+    "finalize_encounter_button": "Finalize encounter",
+    "unassign": "Unassign",
+    "are_you_sure": "Are you sure you want to unassign",
+    "could_not_load": "Could not load services.",
+    "close": "Close",
+    "error": "Error",
+    "loadingServices": "Loading Services",
+    "completed": "completed",
+    "planned": "planned",
+    "cancelled": "cancelled",
+    "in_progress": "in_progress",
     "add_encounter": "Add Encounter",
     "failed_to_load_more_encounters": "Failed to load more encounters.",
     "try_again": "Try Again",
@@ -1249,6 +1342,8 @@
     "unassign_button": "Unassign"
   },
   "allergyPage": {
+    "click_to_view_details": "Click to view details",
+    "should_add_encounter": "Should add encounter first",
     "add_allergy": "Add allergy",
     "unknown_allergy": "Unknown Allergy",
     "type_label": "Type:",
@@ -1301,7 +1396,8 @@
     "notSpecified": "Not Specified",
     "high": "High",
     "moderate": "Moderate",
-    "low": "Low"
+    "low": "Low",
+    "tooltip": "Click to view details"
   },
   "allergyFilterDialog": {
     "filterAllergiesTitle": "Filter Allergies",
@@ -1334,27 +1430,6 @@
     "fieldRequired": "{0} is required",
     "allergyCreatedSuccess": "Allergy created successfully",
     "allergyUpdatedSuccess": "Allergy updated successfully"
-  },
-  "reactionDetailsPage": {
-    "title": "Reaction Details",
-    "editButton": "Edit",
-    "deleteButton": "Delete",
-    "unknownSubstance": "Unknown Substance",
-    "noManifestation": "No manifestation provided.",
-    "detailsSectionTitle": "Details",
-    "noAdditionalDetails": "No additional details available.",
-    "severityLabel": "Severity:",
-    "notApplicable": "N/A",
-    "exposureRouteLabel": "Exposure Route:",
-    "onsetSectionTitle": "Onset",
-    "unknownOnset": "Unknown",
-    "notesSectionTitle": "Notes",
-    "deleteConfirmationTitle": "Delete Reaction",
-    "deleteConfirmationContent": "Are you sure you want to delete this reaction? This action cannot be undone.",
-    "cancelButton": "Cancel",
-    "confirmDeleteButton": "Delete",
-    "errorLoadingReactions": "Error loading reaction details: {error}",
-    "retryLoadingButton": "Retry Loading"
   },
   "imagingStudyDetailsPage": {
     "appBarTitle": "Imaging Study Details",
@@ -1588,6 +1663,7 @@
     "statusRevoked": "Revoked"
   },
   "serviceRequestsOfAppointment": {
+    "should_add_encounter": "Should add encounter first",
     "createServiceRequest": "Create Service Request",
     "errorLoading": "Error loading service requests",
     "retryButton": "Retry",
@@ -1693,32 +1769,6 @@
     "clinicalStatus": "Clinical Status",
     "verificationStatus": "Verification Status",
     "stage": "Stage"
-  },
-  "medicationRequestDetails": {
-    "title": "Medication Request Details",
-    "editMedicationRequest": "Edit Medication Request",
-    "deleteMedicationRequest": "Delete Medication Request",
-    "failedToLoad": "Failed to load medication request details. Please try again.",
-    "retry": "Retry",
-    "noDetailsAvailable": "No medication request details available.",
-    "defaultMedicationRequest": "Medication Request",
-    "requestInformation": "Request Information",
-    "intent": "Intent",
-    "priority": "Priority",
-    "statusReason": "Status Reason",
-    "statusChanged": "Status Changed",
-    "conditionInformation": "Condition Information",
-    "condition": "Condition",
-    "noCondition": "No condition",
-    "clinicalStatus": "Clinical Status",
-    "additionalInformation": "Additional Information",
-    "courseOfTherapy": "Course of Therapy",
-    "repeatsAllowed": "Repeats Allowed",
-    "note": "Note",
-    "doNotPerform": "Do Not Perform",
-    "yes": "Yes",
-    "no": "No",
-    "notAvailableAbbr": "N/A"
   },
   "medicationDetails": {
     "title": "Medication Details",
@@ -1861,9 +1911,11 @@
     "additionalNotes": "Additional Notes",
     "reports": "Diagnostic reports",
     "medications": "Medication requests",
-    "details": "Details"
+    "details": "Details",
+    "articles": "Articles"
   },
   "conditionsOfAppointment": {
+    "should_add_encounter": "Should add encounter first",
     "addCondition": "Add Condition",
     "noConditionsFound": "No conditions found",
     "refresh": "Refresh",
@@ -1871,15 +1923,6 @@
     "onset": "Onset",
     "status": "Status",
     "verification": "Verification",
-    "stage": "Stage"
-  },
-  "conditionsList": {
-    "noConditionsFound": "No conditions found",
-    "refresh": "Refresh",
-    "unknownCondition": "Unknown Condition",
-    "onsetDate": "Onset Date",
-    "clinicalStatus": "Clinical Status",
-    "verificationStatus": "Verification Status",
     "stage": "Stage"
   },
   "createEditReaction": {
@@ -2025,6 +2068,19 @@
     "apply": "Apply"
   },
   "createConditionPage": {
+    "no_reason": "No reason",
+    "no_services": "No service",
+    "no_details": "No details",
+    "and": "and",
+    "imaging_studies": "imaging studies",
+    "observations": "observations",
+    "no_service": "No service requests selected",
+    "select_service": "Select Service Requests",
+    "selected": "Selected",
+    "encounters": "encounters",
+    "no_encounters_selected": "No encounters selected",
+    "select_encounters": "Select Encounters",
+    "not_data": "Not data now",
     "createCondition": "Create Condition",
     "select": "Select",
     "healthIssue": "Health Issue",
@@ -2279,6 +2335,23 @@
     "apply": "APPLY"
   },
   "medicationRequestDetailsPage": {
+    "editMedicationRequest": "Edit Medication Request",
+    "deleteMedicationRequest": "Delete Medication Request",
+    "failedToLoad": "Failed to load medication request details. Please try again.",
+    "retry": "Retry",
+    "noDetailsAvailable": "No medication request details available.",
+    "defaultMedicationRequest": "Medication Request",
+    "intent": "Intent",
+    "priority": "Priority",
+    "statusReason": "Status Reason",
+    "statusChanged": "Status Changed",
+    "condition": "Condition",
+    "clinicalStatus": "Clinical Status",
+    "courseOfTherapy": "Course of Therapy",
+    "repeatsAllowed": "Repeats Allowed",
+    "note": "Note",
+    "doNotPerform": "Do Not Perform",
+    "notAvailableAbbr": "N/A",
     "title": "Medication Request Details",
     "editTooltip": "Edit Medication Request",
     "deleteTooltip": "Delete Medication Request",
@@ -2382,18 +2455,46 @@
     "diagnosticReportFilter_clearFilters": "Clear Filters",
     "diagnosticReportFilter_cancel": "Cancel",
     "diagnosticReportFilter_apply": "Apply"
-  }
-,
-"notifications":{
-"title": "Notifications",
-  "retry": "Retry",
-  "deleteNotification": "Delete notification",
-  "Do_you_delete": "Do you want to delete this notification?",
-  "delete": "Delete",
-  "cancel": "Cancel",
-  "error": "Error",
-  "ok": "OK",
-  "noHealth": "No health tip content available"
-}
-
+  },
+  "notifications": {
+    "title": "Notifications",
+    "retry": "Retry",
+    "deleteNotification": "Delete notification",
+    "Do_you_delete": "Do you want to delete this notification?",
+    "delete": "Delete",
+    "cancel": "Cancel",
+    "error": "Error",
+    "ok": "OK",
+    "noHealth": "No health tip content available",
+    "show_all": "Show all",
+    "show_unread": "Show unread"
+  },
+  "failed_to_fetch_articles": "Failed to fetch articles",
+  "allergies": {
+    "high": "High",
+    "low": "Low",
+    "unable_to_assess": "Unable to assess",
+    "not_applicable": "N/A"
+  },
+  "reactions": {
+    "severity": {
+      "mild": "Mild",
+      "moderate": "Moderate",
+      "severe": "Severe",
+      "not_applicable": "N/A"
+    },
+    "allergies": {
+      "high": "High",
+      "low": "Low",
+      "unable_to_assess": "Unable to assess",
+      "not_applicable": "N/A"
+    }
+  },
+  "serverError": "Failed to fetch patients",
+  "updateSuccess": "Patient updated successfully",
+  "toggleActiveSuccess": "Active status updated",
+  "toggleDeceasedSuccess": "Deceased status updated",
+  "vacation_created_successfully": "Vacation created successfully",
+  "send": "Send",
+  "encounter_updated_successfully": "Encounter updated successfully"
 }
